fail_crate/tests/duplicate_different_no_prefix.rs
use inew::New;

#[derive(New)]
#[new(no_prefix, no_prefix = false)]
enum A {}

fn main() {}
